Removed lots of redundant stuff. Simplified localization.

--- a/AdvancedProgramming_Lesson2/AdvancedProgramming_Lesson2/Views/Home/About.cshtml
+++ b/AdvancedProgramming_Lesson2/AdvancedProgramming_Lesson2/Views/Home/About.cshtml
@@ -1,6 +1,11 @@
-﻿
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization
+@using Microsoft.AspNetCore.Localization;
+
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
+
 @{
-    ViewData["Title"] = "O mnie";
+    ViewData["Title"] = SharedLocalizer["About"];
 }
 
 <h1>Mam na imię Jan Kowalski</h1>
